--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -58,6 +58,7 @@
 
     <EditText
         android:id="@+id/edtTitle"
+        android:paddingStart="10dp"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_alignTop="@+id/imageView2"
@@ -132,7 +133,7 @@
         android:layout_below="@+id/viewSound"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-
+        android:paddingStart="10dp"
         android:layout_toEndOf="@+id/specialtytext"
         android:background="@drawable/bigtf"
         android:textSize="20sp"
