--- a/app/src/main/res/layout/activity_guardianmain.xml
+++ b/app/src/main/res/layout/activity_guardianmain.xml
@@ -170,7 +170,7 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/tvGender"
+        android:id="@+id/tvGenderInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
