--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -44,8 +44,9 @@
             android:textSize="22sp"
             android:gravity="center"/>
 
-        <Button
+        <TextView
             android:id="@+id/btnEdit"
+            android:clickable="true"
             android:layout_width="40dp"
             android:layout_height="30dp"
             android:layout_alignParentTop="true"
@@ -82,6 +83,7 @@
 
     <TextView
         android:id="@+id/tvHits"
+        android:visibility="invisible"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
@@ -93,6 +95,7 @@
 
     <TextView
         android:id="@+id/tvHitsNum"
+        android:visibility="invisible"
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:layout_marginTop="10dp"
