--- a/app/src/main/res/layout/activity_guardianmain.xml
+++ b/app/src/main/res/layout/activity_guardianmain.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="5dp"
         android:layout_weight="1"
-        android:background="@drawable/man"
+        app:srcCompat="@drawable/man"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
@@ -125,6 +125,7 @@
 
         <Button
             android:id="@+id/btnEdit"
+            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
