--- a/app/src/main/res/layout/activity_infoedit.xml
+++ b/app/src/main/res/layout/activity_infoedit.xml
@@ -62,7 +62,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
-                android:background="@drawable/man"
+                app:srcCompat ="@drawable/man"
                 android:clickable="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.534"
