--- a/app/src/main/res/layout/activity_guardianmain.xml
+++ b/app/src/main/res/layout/activity_guardianmain.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="5dp"
         android:layout_weight="1"
-        app:srcCompat="@drawable/man"
+        app:srcCompat="@drawable/fomd1"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
