--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -75,9 +75,10 @@
         android:id="@+id/ivStar"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:clickable="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/imgstar"
+        android:src="@drawable/imgstar_empty"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />
 
