아동 모드 완성

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -29,7 +29,7 @@
             android:background="@drawable/backbtn" />
 
         <TextView
-            android:id="@+id/tvTitle"
+            android:id="@+id/tvChildCategoryName"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_alignParentStart="true"
