--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -46,6 +46,7 @@
 
         <TextView
             android:id="@+id/btnEdit"
+            android:visibility="invisible"
             android:clickable="true"
             android:layout_width="40dp"
             android:layout_height="30dp"
