--- a/app/src/main/res/layout/item_faq_recycler.xml
+++ b/app/src/main/res/layout/item_faq_recycler.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list_category"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
     android:backgroundTint="@color/oatmeal"
-    android:orientation="vertical"
-    tools:layout_editor_absoluteX="10dp"
-    tools:layout_editor_absoluteY="10dp">
+    android:id="@+id/list_faq">
 
 
     <TextView
@@ -24,7 +19,6 @@
         android:includeFontPadding="false"
         android:text="질문"
         android:textColor="@color/black"
-        android:textSize="15sp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:textSize="15sp" />
 
 </LinearLayout>
