--- a/app/src/main/res/layout/activity_child_post.xml
+++ b/app/src/main/res/layout/activity_child_post.xml
@@ -71,10 +71,10 @@
 
     <Button
         android:id="@+id/btnSound"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/soundbtn"
+        android:layout_width="206dp"
+        android:layout_height="158dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/fomdsound"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />
