--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,17 +27,17 @@
     <Button
         android:id="@+id/btnGuardian"
         android:layout_width="200dp"
-        android:layout_height="125dp"
+        android:layout_height="70dp"
 
         android:layout_marginTop="10dp"
         android:layout_marginBottom="100dp"
-        android:background="@drawable/btnguardian"
+        android:background="@drawable/btn_adult"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.29"
+        app:layout_constraintVertical_bias="0.1"
         tools:ignore="MissingConstraints"></Button>
 
     <Button
@@ -48,13 +48,13 @@
         android:layout_marginTop="60dp"
         android:layout_marginBottom="10dp"
 
-        android:background="@drawable/btnchild"
+        android:background="@drawable/btn_child"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.613"
+        app:layout_constraintVertical_bias="0.419"
         tools:ignore="MissingConstraints"></Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
