--- a/app/src/main/res/layout/activity_faqanswer.xml
+++ b/app/src/main/res/layout/activity_faqanswer.xml
@@ -39,15 +39,17 @@ android:background="@color/oatmeal">
         android:background="@drawable/question_bg"
         tools:ignore="MissingConstraints" />
 
-    <EditText
+    <TextView
         android:id="@+id/faqDQ"
-        android:textSize="15sp"
         android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/toolbar"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="22dp"
-        android:text="질문" />
+        android:layout_height="30dp"
+        android:layout_alignTop="@+id/faqQuestionbg"
+        android:layout_alignBottom="@+id/faqQuestionbg"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="4dp"
+        android:text="질문"
+        android:textSize="20sp" />
 
     <ImageView
         android:id="@+id/faqAnswer"
@@ -60,7 +62,7 @@ android:background="@color/oatmeal">
         android:background="@drawable/answer_bg"
         tools:ignore="MissingConstraints" />
 
-    <EditText
+    <TextView
         android:id="@+id/faqDA"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
