--- a/app/src/main/res/layout/activity_faqanswer.xml
+++ b/app/src/main/res/layout/activity_faqanswer.xml
@@ -66,14 +66,14 @@ android:background="@color/oatmeal">
         android:id="@+id/faqDA"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
         android:layout_alignStart="@+id/faqAnswer"
+        android:layout_alignTop="@+id/faqAnswer"
         android:layout_alignEnd="@+id/faqAnswer"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="164dp"
-        android:layout_marginEnd="51dp"
-        android:textSize="13sp"
-        android:text="답변" />
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:text="답변"
+        android:textSize="15sp" />
 
 
 </RelativeLayout>
